Added about page specs.

--- a/frontend/src/app/pages/about/about.component.html
+++ b/frontend/src/app/pages/about/about.component.html
@@ -26,10 +26,8 @@
 </p>
 
 <p>
-  <a href="http://www.leedsuniversityunion.org.uk/groups/skydiving/">
-    <button id="join-button">
-      Join Leeds University Skydivers
-    </button>
+  <a id="join-button" href="http://www.leedsuniversityunion.org.uk/groups/skydiving/" class="button">
+    Join Leeds University Skydivers
   </a>
 </p>
 
