Added spec to test whole sign-up process.

--- a/frontend/src/app/admin/signup/main/signup.component.html
+++ b/frontend/src/app/admin/signup/main/signup.component.html
@@ -28,7 +28,7 @@
           Please enter a valid phone number
         </div>
 
-        <div *ngIf="errors && errors.phoneNumber" class="form-field-error">
+        <div *ngIf="errors && errors.phoneNumber" class="form-field-error" id="general-errors">
           {{translate(errors.phoneNumber)}}
         </div>
       </div>
