Changed site font to Bree Serif.

--- a/frontend/src/app/pages/base/base.component.sass
+++ b/frontend/src/app/pages/base/base.component.sass
@@ -95,7 +95,7 @@ $header-breakpoint: max-width 40em
       color: $lsd_yellow
 
     a
-      font-family: 'Patrick Hand SC', cursive
+      font-family: 'Bree Serif', serif
       letter-spacing: 0.05em
       font-size: 1.35rem
       padding: 0.8em 1em
@@ -155,7 +155,7 @@ $header-breakpoint: max-width 40em
   padding: 0.5rem
   text-align: center
   color: #555
-  font-family: 'Patrick Hand SC', cursive
+  font-family: 'Bree Serif', serif
   margin-top: 1rem
 
 // Feature images
