--- a/frontend/src/app/pages/prices/prices.component.sass
+++ b/frontend/src/app/pages/prices/prices.component.sass
@@ -22,7 +22,7 @@ $packages-breakpoint: max-width 38em
     width: 13%
     margin-left: 1%
     font-size: 1.5em
-    font-family: 'Patrick Hand SC', cursive
+    font-family: 'Bree Serif', serif
     text-align: right
     vertical-align: top
 
