--- a/frontend/src/assets/css/base/_variables.scss
+++ b/frontend/src/assets/css/base/_variables.scss
@@ -3,9 +3,9 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-$base-font-family: 'Open Sans', sans-serif;
-$form-font-family: 'Open Sans', sans-serif;
-$heading-font-family: 'Patrick Hand SC', cursive;
+$base-font-family: 'Bree Serif', sans-serif;
+$form-font-family: $base-font-family;
+$heading-font-family: $base-font-family;
 
 // Font Sizes
 $base-font-size: 1em;
