--- a/frontend/src/assets/css/base/_variables.scss
+++ b/frontend/src/assets/css/base/_variables.scss
@@ -3,7 +3,7 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-$base-font-family: 'Bree Serif', serif;
+$base-font-family: 'Roboto Slab', serif;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
