--- a/frontend/src/app/members/login/login.component.sass
+++ b/frontend/src/app/members/login/login.component.sass
@@ -56,3 +56,10 @@ header
 
 hr
   margin: 1em -1em
+
+$error-colour: #ffe4b3
+
+.error
+  padding: 1em
+  background: $error-colour
+  border: solid 0.1em darken($error-colour, 20%)
