Fixed main site not having a max width.

--- a/frontend/src/app/pages/base/base.component.sass
+++ b/frontend/src/app/pages/base/base.component.sass
@@ -6,6 +6,8 @@
 // General page structure
 #header, #navbar, #content, #footer
   @include grid-container
+  margin: 0 auto
+  max-width: 88em
 
 #navbar, #content, #footer
   & > div
