Added dashboard skeleton with profile component.

--- a/frontend/src/app/members/members.component.html
+++ b/frontend/src/app/members/members.component.html
@@ -1,7 +1,12 @@
 <div id="members-container">
   <router-outlet></router-outlet>
 
-  <footer class="footer">
-    <p>&copy; 2016 Leeds University Skydivers</p>
-  </footer>
+  <div id="footer-wrapper">
+    <footer>
+      <p>
+        &copy; 2017 Leeds University Skydivers. Website sloppily hacked together by <a
+        href="http://jsherz.com">jSherz.</a> Powered by carrots.
+      </p>
+    </footer>
+  </div>
 </div>
