Improved header and navbar styling on mobile.

--- a/frontend/src/app/pages/base/base.component.html
+++ b/frontend/src/app/pages/base/base.component.html
@@ -1,23 +1,26 @@
 <div id="header">
   <div id="header-logo">
     <a [routerLink]="['/']" title="Homepage">
-      <img src="/assets/images/header.png" alt="Leeds University Skydivers Logo" title="Leeds University Skydivers Logo">
+      <img src="/assets/images/header.png" alt="Leeds University Skydivers Logo"
+           title="Leeds University Skydivers Logo">
     </a>
   </div>
 
   <div id="header-title">
     <h1>Leeds Uni Skydivers</h1>
 
-    <div id="twitter-icon">
-      <a href="https://twitter.com/LeedsSkyDivers" title="Leeds Skydivers on Twitter">
-        <i class="fa fa-twitter-square"></i>
-      </a>
-    </div>
+    <div id="social-icons">
+      <div id="twitter-icon">
+        <a href="https://twitter.com/LeedsSkyDivers" title="Leeds Skydivers on Twitter">
+          <i class="fa fa-twitter-square" aria-hidden="true"></i>
+        </a>
+      </div>
 
-    <div id="facebook-icon">
-      <a href="https://www.facebook.com/leedsuniskydivers" title="Leeds Skydivers on Facebook">
-        <i class="fa fa-facebook-square"></i>
-      </a>
+      <div id="facebook-icon">
+        <a href="https://www.facebook.com/leedsuniskydivers" title="Leeds Skydivers on Facebook">
+          <i class="fa fa-facebook-square" aria-hidden="true"></i>
+        </a>
+      </div>
     </div>
   </div>
 </div>
