--- a/frontend/src/app/pages/home/home.component.sass
+++ b/frontend/src/app/pages/home/home.component.sass
@@ -9,9 +9,10 @@
   @include flash($notice-colour)
   padding: 0.5em
   text-align: center
-  font-size: 2.5em
+  font-size: 2rem
   font-style: italic
   margin-bottom: 1rem
+  line-height: 1em
 
   a
     text-decoration: underline
