Fixed styling of sign-up components.

--- a/frontend/src/assets/css/application.sass
+++ b/frontend/src/assets/css/application.sass
@@ -16,6 +16,7 @@
       @include grid-shift(0)
 
 #intro-hero
+  clear: both
   padding: 2em
   border: solid 0.2em $lsd-blue
   border-radius: 0.5em
@@ -51,6 +52,7 @@ input[type=submit], button[type=submit]
   margin-top: 0.5em
 
 footer
+  clear: both
   margin-top: 1em
   text-align: center
   color: #666
