Added a "What about the weather?" component to dashboard.

--- a/frontend/src/app/members/dashboard/dashboard.component.html
+++ b/frontend/src/app/members/dashboard/dashboard.component.html
@@ -32,11 +32,13 @@
     </div>
   </div>
 
-  <div id="dashboard-packing-list">
-    <lsd-packing-list></lsd-packing-list>
+  <div id="dashboard-left">
+    <lsd-key-info></lsd-key-info>
   </div>
 
-  <div id="dashboard-key-info">
-    <lsd-key-info></lsd-key-info>
+  <div id="dashboard-right">
+    <lsd-packing-list></lsd-packing-list>
+
+    <lsd-the-weather></lsd-the-weather>
   </div>
 </div>
