Corrected size of signup container.

--- a/frontend/src/assets/css/application.sass
+++ b/frontend/src/assets/css/application.sass
@@ -1,6 +1,8 @@
 @import base
 
 #signup-container
+  max-width: 88em
+  margin: 0 auto
   @include grid-container()
 
   #small-header, #intro-hero, footer
