Added login check for member's dashboard & login page.

--- a/frontend/src/app/members/members.component.sass
+++ b/frontend/src/app/members/members.component.sass
@@ -1,9 +1,11 @@
 @import '../../assets/css/base'
 
+#members-container
+  width: 88em
+  margin: 0 auto
+
 #footer-wrapper
   @include grid-container()
-  max-width: 88em
-  margin: 0 auto
 
   & > div
     @include grid-column(12)
