Added a dummy committee dashboard.

--- a/frontend/src/app/members/dashboard/dashboard.component.html
+++ b/frontend/src/app/members/dashboard/dashboard.component.html
@@ -1,28 +1,5 @@
-<div id="header">
-  <div id="header-logo">
-    <a [routerLink]="['/members', 'dashboard']" title="Homepage">
-      <img src="/assets/images/header.png" alt="Leeds University Skydivers Logo"
-           title="Leeds University Skydivers Logo">
-    </a>
-  </div>
-
-  <div id="header-title">
-    <h1>Leeds Uni Skydivers</h1>
-  </div>
-
-  <div id="social-icons">
-    <div id="twitter-icon">
-      <a href="https://twitter.com/LeedsSkyDivers" title="Leeds Skydivers on Twitter">
-        <i class="fa fa-twitter-square"></i>
-      </a>
-    </div>
-
-    <div id="facebook-icon">
-      <a href="https://www.facebook.com/leedsuniskydivers" title="Leeds Skydivers on Facebook">
-        <i class="fa fa-facebook-square"></i>
-      </a>
-    </div>
-  </div>
+<div id="header-wrapper">
+  <lsd-header></lsd-header>
 </div>
 
 <div id="dashboard-wrapper">
