Added number of received messages to committee dashboard.

--- a/frontend/src/app/members/committee-dashboard/committee-dashboard.component.html
+++ b/frontend/src/app/members/committee-dashboard/committee-dashboard.component.html
@@ -28,20 +28,7 @@
 
   <div id="committee-dashboard-right">
     <div id="stats">
-      <h2>
-        Stats (&lt;3 numbers)
-      </h2>
-
-      <dl>
-        <dt>Number of members</dt>
-        <dd>0</dd>
-
-        <dt>Number of text messages sent</dt>
-        <dd>0</dd>
-
-        <dt>Most recent member</dt>
-        <dd>N/A</dd>
-      </dl>
+      <lsd-committee-stats></lsd-committee-stats>
     </div>
   </div>
 </div>
