Moved sign-up components to commitee module.

--- a/frontend/src/app/committee/dashboard/dashboard.component.html
+++ b/frontend/src/app/committee/dashboard/dashboard.component.html
@@ -13,6 +13,14 @@
         Welcome to the committee dashboard. From here, you can manage all aspects of members and their interactions
         with the website.
       </p>
+
+      <h3>Got newbies?</h3>
+
+      <p>
+        <a [routerLink]="['/members', 'committee', 'sign-up']" class="button" id="signups-link">
+          Sign-up members
+        </a>
+      </p>
     </div>
 
     <div id="text-messages">
