--- a/frontend/src/app/committee/dashboard/dashboard.component.sass
+++ b/frontend/src/app/committee/dashboard/dashboard.component.sass
@@ -43,6 +43,9 @@
       margin-top: 0.1em
       font-size: 5rem
 
+#signups-link
+  padding: 0.5em
+
 // Social icons
 #social-icons
   @media(min-width: 37.5em)
