Updated prices. Added sponsorship.

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -5,6 +5,21 @@
   </p>
 </div>
 
+<div id="xdream">
+  <div id="xdream-logo">
+    <a href="https://xdsports.uk">
+      <img src="/assets/images/xdream.png" title="XDream skydiving gear store" alt="XDream skydiving gear store">
+    </a>
+  </div>
+
+  <div id="xdream-introductionayy">
+    <p>
+      Thank you to our awesome sponsors, <a href="https://xdsports.uk">XDream</a>. Fingers turning to blocks of ice? Check
+      them out for glove liners. 5 'o clock shadow freezing in the frosty air? Grab a buff or full-face helmet.
+    </p>
+  </div>
+</div>
+
 <div id="frontpage-video">
   <div id="frontpage-video-wrapper">
     <iframe *ngIf="showVideo"
