--- a/frontend/src/app/pages/home/home.component.sass
+++ b/frontend/src/app/pages/home/home.component.sass
@@ -40,3 +40,39 @@
 #video-placeholder
   img
     width: 100%
+
+#xdream
+  padding: 0
+  max-width: 50%
+  margin: 0 auto 1rem auto
+  display: flex
+  align-items: center
+
+  @media(max-width: 40rem)
+    max-width: 100%
+    display: block
+    background-color: #222
+    color: #fff
+
+    #xdream-logo
+      text-align: center
+      width: auto
+      height: auto
+
+#xdream-logo
+  width: 40rem
+  height: 9.5rem
+
+  img
+    background: #222
+    padding: 1rem
+
+  @media(min-width: 40rem)
+    display: flex
+    align-items: center
+
+#xdream-introductionayy
+  padding: 1rem
+
+  p
+    margin: 0
