--- a/frontend/src/app/pages/prices/prices.component.html
+++ b/frontend/src/app/pages/prices/prices.component.html
@@ -55,7 +55,7 @@
       </p>
     </div>
 
-    <div class="package-price">&pound;32.00</div>
+    <div class="package-price">&pound;36.00</div>
   </li>
 
   <li>
@@ -63,8 +63,8 @@
       <h3>Tandem skydive</h3>
 
       <p>
-        Experience the ultimate thrill with none of the whole "opening your own parachute" bit... Still awesome but
-        it's not cheap!
+        Experience the ultimate thrill without having to operate your own parachute.... Still awesome but it's not
+        cheap!
       </p>
     </div>
 
